sandc/test/fixtures/astRegression/shouldSucceed/productions/file/PackageStatement.sand
package my.awesome.packagename;

pub class PackageStatement {
    
}