sandc/test/fixtures/astRegression/shouldFail/productions/statement/PropertyHasBeenInitializedAssertionWithNonIdentifier.sand
pub class PropertyHasBeenInitializedAssertionWithNonIdentifier {
    foo() {
        this.a hasbeeninitialized;
    }
}